--- a/src/ch02/Makefile
+++ b/src/ch02/Makefile
@@ -1,9 +1,15 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = array newdelete IntArray
+OBJECT = array newdelete IntArray IntArrayRC
 
 all : $(OBJECT)
+
+IntArray : IntArray.h IntArray.cpp
+	$(CC) $(CFLAGS) -o IntArray IntArray.cpp
+
+IntArrayRC : IntArrayRC.h IntArrayRC.cpp
+	$(CC) $(CFLAGS) -o IntArrayRC IntArrayRC.cpp
 
 .cpp.s :
 	$(CC) $(CFLAGS) -S $*.cpp
