--- a/src/ch02/Makefile
+++ b/src/ch02/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = array newdelete IntArray IntArrayRC ArrayTest ArrayRCTest
+OBJECT = array newdelete IntArray IntArrayRC ArrayTest ArrayRCTest stats
 
 all : $(OBJECT)
 
