--- a/src/ch02/Makefile
+++ b/src/ch02/Makefile
@@ -1,7 +1,8 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = array newdelete IntArray IntArrayRC ArrayTest ArrayRCTest stats alloc_init
+OBJECT = array newdelete IntArray IntArrayRC ArrayTest ArrayRCTest stats alloc_init \
+	vectortest
 
 all : $(OBJECT)
 
