#ifdef DEBUG #endif with g++ -DDEBUG

--- a/src/ch01/Makefile
+++ b/src/ch01/Makefile
@@ -1,9 +1,12 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = bookstore bookstore_if loop fstream
+OBJECT = bookstore bookstore_if loop main fstream
 
 all : $(OBJECT)
+
+main : main.cpp
+	$(CC) $(CFLAGS) -DDEBUG -o main main.cpp
 
 .cpp.s :
 	$(CC) $(CFLAGS) -S $*.cpp
