--- a/src/ch01/Makefile
+++ b/src/ch01/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = bookstore bookstore_if loop main cplusplus fstream
+OBJECT = bookstore bookstore_if loop main cplusplus stdc fstream
 
 all : $(OBJECT)
 
