Use init method to rewrite constructor of InitArray

--- a/src/ch02/Makefile
+++ b/src/ch02/Makefile
@@ -1,8 +1,8 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = array newdelete IntArray IntArrayRC ArrayTest ArrayRCTest stats \
-	alloc_init vectortest sort map min
+OBJECT = array newdelete IntArray IntArrayInit IntArrayRC ArrayTest ArrayRCTest \
+	 stats alloc_init vectortest sort map min
 
 all : $(OBJECT)
 
