--- a/src/ch03/Makefile
+++ b/src/ch03/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = pow2 pointeriter foobar strlen
+OBJECT = pow2 pointeriter foobar strlen string
 
 all : $(OBJECT)
 
