--- a/src/ch03/Makefile
+++ b/src/ch03/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = pow2 pointeriter foobar stringlength strlen string carr cppstring
+OBJECT = pow2 pointeriter foobar stringlength emptystring strlen string carr cppstring
 
 all : $(OBJECT)
 
