--- a/src/ch04/Makefile
+++ b/src/ch04/Makefile
@@ -2,9 +2,12 @@ CFLAGS=-g -Og
 CC=g++
 
 OBJECT = char_overflow bool2num ptrtest inc complex complexinc minmax sizeof bit \
-	 bit_typedef bit_template initfib cast
+	 bit_typedef bit_template initfib cast iStackTest
 
 all : $(OBJECT)
+
+iStackTest : iStackTest.cpp iStack.h
+	$(CC) $(CFLAGS) -o iStackTest iStackTest.cpp iStack.h
 
 .cpp.s :
 	$(CC) $(CFLAGS) -S $*.cpp
