--- a/src/ch05/Makefile
+++ b/src/ch05/Makefile
@@ -1,11 +1,17 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = declaration ilistTest
+OBJECT = declaration ilistTest ilistRemoveTest ilistReverseConcatTest
 
 all : $(OBJECT)
 
 ilistTest : ilistTest.cpp ilist.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+ilistRemoveTest : ilistRemoveTest.cpp ilist.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+ilistReverseConcatTest : ilistReverseConcatTest.cpp ilist.h
 	$(CC) $(CFLAGS) -o $@ $<
 
 .cpp.s :
