--- a/src/ch05/Makefile
+++ b/src/ch05/Makefile
@@ -1,7 +1,8 @@
 CFLAGS=-g -Og
 CC=g++
 
-OBJECT = declaration min switchdemo spaceCount ilistTest ilistRemoveTest ilistReverseConcatTest \
+OBJECT = declaration min switchdemo spaceCount fffiflCount \
+	ilistTest ilistRemoveTest ilistReverseConcatTest \
 	ilistConstructorTest ilistInsertArrayTest listTest
 
 all : $(OBJECT)
