--- a/src/ch05/Makefile
+++ b/src/ch05/Makefile
@@ -2,6 +2,7 @@ CFLAGS=-g -Og
 CC=g++
 
 OBJECT = declaration min switchdemo spaceCount fffiflCount \
+	fordemo \
 	ilistTest ilistRemoveTest ilistReverseConcatTest \
 	ilistConstructorTest ilistInsertArrayTest listTest
 
