make TextQuery with gcc -g -Og

--- a/src/ch06/Makefile
+++ b/src/ch06/Makefile
@@ -5,6 +5,9 @@ OBJECT = size_capacity TextQuery
 
 all : $(OBJECT)
 
+TextQuery : TextQuery.cpp
+	$(CC) $(CFLAGS) -o $@ $<
+
 .cpp.s :
 	$(CC) $(CFLAGS) -S $*.cpp
 .cpp.o :
