--- a/src/ch06/Makefile
+++ b/src/ch06/Makefile
@@ -4,7 +4,7 @@ CC=g++
 OBJECT = size_capacity reserve resize container iterator insert erase assign swap \
 	 algorithm ivec ilist find find_first_of findall rfind find_first_not_of \
 	 find_num_alph maxmin minmax erase_ex string_ex assign_append replace_ex \
-	 TextQuery
+	 map TextQuery
 
 all : $(OBJECT)
 
